# wakanda-voice

./: .gitignore  README.md  launch.py  pyproject.toml
configs/: default.yaml
frontend/: index.html
orchestrator/: config.py  main.py  orchestrator.py  session_logger.py  vad.py
orchestrator/clients/: llm_client.py  ws_client.py
orchestrator/pipelines/: multilingual_bot.py  s2st.py
scripts/: test_pipeline_local.py  token_server.py
servers/: base.py  device.py  mt_server.py  stt_server.py  tts_server.py
